crates/nixon-picker/src/snapshots/nixon_picker__editor__tests__renders_a_multi_line_source.snap
---
source: crates/nixon-picker/src/editor.rs
expression: "draw(&TextArea::new(\"set -e\\necho one\\necho two\"))"
---
">                                       "
"set -e                                  "
"echo one                                "
"echo two                                "
"                                        "
"                                        "
