crates/nixon-picker/src/snapshots/nixon_picker__editor__tests__renders_a_single_line_source.snap
---
source: crates/nixon-picker/src/editor.rs
expression: "draw(&TextArea::new(\"git ls-files\"))"
---
">                                       "
"git ls-files                            "
"                                        "
"                                        "
"                                        "
"                                        "
